--- a/src/style.css
+++ b/src/style.css
@@ -1,21 +1,20 @@
-#root {
-	height: 600px;
-	width: 600px;
-	border: solid blueviolet;
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-    margin: auto;
-}
-
-#map {
-  height: 100%;
+html, body {
   width: 100%;
-  border-collapse: collapse;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
 }
 
-tr td {
-  border: 1px solid yellow;
+#root {
+  width: 100%;
+  height: 100%;
+  background-color: #434343;
+}
+
+#root canvas {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
